--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/cruzma/e-commerce-back-end/issues"
   },
-  "homepage": "https://github.com/cruzma/e-commerce-back-end#readme"
+  "homepage": "https://github.com/cruzma/e-commerce-back-end#readme",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.5.0"
+  }
 }
